--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0"/>
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Dynamo the dynamic form" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
